--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fullstack tutorial using nodejs backend ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
